hphp/test/slow/constant/bad-arrays.php.expectf
"$a = 123; const BADARRAY = [$a];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(2df23d346ae21584ffbd53615a72f749) : eval()'d code on line 1

==============================================================
"$a = 123; const BADARRAY = [100 + $a + 200];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(c087c3ef4e57724ed1a61b05ace4675c) : eval()'d code on line 1

==============================================================
"const BADARRAY = [new stdclass];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(2254b790ac563cabfd727f751b29c549) : eval()'d code on line 1

==============================================================
"const BADARRAY = [foobaz()];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(3b5198a14e4bce941862c8b00d9eb61c) : eval()'d code on line 1

==============================================================
"const BADARRAY = [1, [2, new stdclass], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(ba2675c2ecc7aad1556e5afb291107f8) : eval()'d code on line 1

==============================================================
"const BADARRAY = [1, [2, foobaz()], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(bd0d19e2788469ce4a17d5490e0660b0) : eval()'d code on line 1

==============================================================
"const BADARRAY = [$GLOBALS];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(9b0f8039d51cbc98c2175ce725aa58b7) : eval()'d code on line 1

==============================================================
"$a = 123; const BADARRAY = [1, [2, $a], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(a8eea019cb14d2b13f8b5019f5e7cc25) : eval()'d code on line 1

==============================================================
"$a = 123; const BADARRAY = [1, [2, 100 + $a + 200], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(1edf7f9d3b05a0c59200be5030dc456f) : eval()'d code on line 1

==============================================================
"$a = 123; const BADVEC = vec[$a];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(693784aecd5af71a4bb1a72645b3b35d) : eval()'d code on line 1

==============================================================
"$a = 123; const BADVEC = vec[100 + $a + 200];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(1ee720cab5399817e5701c19381249e2) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[new stdclass];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(82e0c7f9870dcff771a3239ab554ed2a) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[foobaz()];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(76ece7c583ab444ac7701aa97f6aba48) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[1, vec[2, new stdclass], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(e2be6c9366d3fbc558dd9ab46b137658) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[1, vec[2, foobaz()], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(3f497f8def3a9300559b51d8e65f5104) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[$GLOBALS];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(28728fcbd98e05b89cb269e26def9ac4) : eval()'d code on line 1

==============================================================
"$a = 123; const BADVEC = vec[1, vec[2, $a], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(a19dcdf25d29308b30511a0573d29cd1) : eval()'d code on line 1

==============================================================
"$a = 123; const BADVEC = vec[1, vec[2, 100 + $a + 200], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(4037e239ef8ba7b6340a8edb222f0bf5) : eval()'d code on line 1

==============================================================
"$a = 123; const BADDICT = dict[0 => $a];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(d1a638511841ce499539a55ee5002d31) : eval()'d code on line 1

==============================================================
"$a = 123; const BADDICT = dict[100 => 100 + $a + 200];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(7d8705592a00acd9bcec24d1cf6d84f4) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[1 => new stdclass];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(ddfe6dd1c32dc1d39865afd470b8fbca) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[1 => foobaz()];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(d22849b922cb406e218c1f034e394d4e) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[1 => 1, 2 => dict[100 => 2, 200 => new stdclass], 3 => 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(6dc55448aa89bf24f1957d1d33fab71f) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[1 => 1, 2 => dict[100 => 2, 200 => foobaz()], 3 => 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(39b8b56b41a14164b3558c464f46f3a2) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[1 => $GLOBALS];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(1f8f68d32fb6b1cc6d6cdc0510a8a7d0) : eval()'d code on line 1

==============================================================
"$a = 123; const BADDICT = dict[1 => 1, 2 => dict[100 => 2, 200 => $a], 3 => 33];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(e80ae3f5029815e26f2a0d5dd04cc230) : eval()'d code on line 1

==============================================================
"$a = 123; const BADDICT = dict[1 => 1, 2 => dict[100 => 2, 200 => 100 + $a + 200], 3 => 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(178d27bcc862b11cd826e6a1fa4d7c54) : eval()'d code on line 1

==============================================================
"$a = 123; const BADKEYSET = keyset[$a];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(fd60d54ee1427e4ac6c13116a605c54a) : eval()'d code on line 1

==============================================================
"$a = 123; const BADKEYSET = keyset[100 + $a + 200];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(44742f3f9379595081608e64c422298c) : eval()'d code on line 1

==============================================================
"const BADKEYSET = keyset[foobaz()];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(98d84fddf5ef71b640c05d03e760c966) : eval()'d code on line 1

==============================================================
"const BADKEYSET = keyset[1, keyset[2, foobaz()], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(0d64fa4036ec7c410c9e5c60da521430) : eval()'d code on line 1

==============================================================
"$a = 123; const BADKEYSET = keyset[1, keyset[2, $a], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(6f876a737ff0a412611eaee4cbbbd36e) : eval()'d code on line 1

==============================================================
"$a = 123; const BADKEYSET = keyset[1, ketset[2, 100 + $a + 200], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(d0daf5289142fe7728abb98ff9935d1e) : eval()'d code on line 1

==============================================================
